add form input to HTML.
Co-authored-by:  Joseph Pearce <joseph.pearce@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Count Up By</title>
   </head>
   <body>
+    <h1>Count up By</h1>
+    <form id="input">
+      <label for="input1">What would you like me to count to?</label>
+      <input id="input1" type="text">
+      <label for="input2">What shall I increase by?</label>
+      <input id="input2" type="text">
+    </form>
     
   </body>
 </html>
