add submit button and handler, document rdy handler and prevent default.
Co-authored-by:  Joseph Pearce <joseph.pearce@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <input id="input1" type="text">
       <label for="input2">What shall I increase by?</label>
       <input id="input2" type="text">
+      <button type="submit" class="btn-primary">Submit!</button>
     </form>
     
   </body>
